--- a/src/main/webapp/app/layouts/footer/footer.component.html
+++ b/src/main/webapp/app/layouts/footer/footer.component.html
@@ -1,3 +1,3 @@
 <div class="footer">
-    <p jhiTranslate="footer">©SQLI Group 2017 - Tous droits réservés</p>
+    <p jhiTranslate="footer">© SQLI Group {{getCurrentYear()}} - Tous droits réservés</p>
 </div>
