notify collaborators with gaps

--- a/src/main/webapp/app/entities/comparator-app-ppmc-advanced/comparator-app-ppmc-advanced.component.html
+++ b/src/main/webapp/app/entities/comparator-app-ppmc-advanced/comparator-app-ppmc-advanced.component.html
@@ -46,8 +46,8 @@
     </div>
     <br/>
     <div>
-        <div class="table-responsive">
-            <button class="btn btn-info btn-sm float-right" type="submit">
+        <div class="table-responsive" *ngIf="comparator">
+            <button class="btn btn-info btn-sm float-right" type="submit" (click)="notifyCollabsWithGap()">
                 <fa-icon [icon]="'envelope'"></fa-icon>
                 <span  jhiTranslate="imputationSqliApp.imputation.notifyAll">
             Notify All
