--- a/src/main/webapp/app/entities/collaborator/collaborator.component.html
+++ b/src/main/webapp/app/entities/collaborator/collaborator.component.html
@@ -1,7 +1,7 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="imputationSqliApp.collaborator.home.title">Collaborators</span>
-        <input #searchedKey type="text" (keyup)="findBySearchedKey(searchedKey.value)" placeholder="Search">
+        <input type="text"  [(ngModel)]="searchedKey" (keyup)="findBySearchedKey()" placeholder="Search">
         <button *jhiHasAnyAuthority="'ROLE_ADMIN'" id="jh-create-entity"
             class="btn btn-primary float-right jh-create-entity create-collaborator"
             [routerLink]="['/collaborator/new']">
