--- a/src/main/webapp/app/entities/comparator-app-tbp-advanced/comparator-app-tbp-advanced.component.html
+++ b/src/main/webapp/app/entities/comparator-app-tbp-advanced/comparator-app-tbp-advanced.component.html
@@ -48,6 +48,13 @@
     <br/>
     <div>
         <div class="table-responsive" *ngIf="comparator">
+            <button id="NotifyAll"
+                    class="btn btn-info btn-sm float-right">
+                <fa-icon [icon]="'envelope'"></fa-icon>
+                <span  jhiTranslate="imputationSqliApp.imputation.notifyAll">
+                Notify All
+            </span>
+            </button>
             <table class="table table-bordered ">
                 <thead>
                 <tr jhiSort [(predicate)]="predicate" [(ascending)]="reverse">
@@ -57,6 +64,9 @@
                     <!--</th>-->
                     <th class="text-center" *ngFor="let day of imputationDays" [id]="day">{{day}}</th>
                     <th><span jhiTranslate="imputationSqliApp.imputation.total">Total</span>
+                    </th>
+                    <th class="text-center"><span
+                        jhiTranslate="imputationSqliApp.imputation.action">Action</span>
                     </th>
                 </tr>
                 </thead>
@@ -72,6 +82,15 @@
                         </span>
                     </td>
                     <td class="text-center"><b>{{element.appMonthlyImputation.total}}</b></td>
+                    <td class="text-right" rowspan="2">
+                        <div class="btn-group flex-btn-group-container">
+                            <button id="notify" *ngIf="isCollabNotifiable.has(element.collaborator)"
+                                    class="btn btn-info btn-sm">
+                                <fa-icon [icon]="'envelope'"></fa-icon>
+                                <span class="d-none d-md-inline"  jhiTranslate="imputationSqliApp.imputation.notify" >Notify</span>
+                            </button>
+                        </div>
+                    </td>
                 </tr>
                 <tr>
                     <th class="text-center">TBP</th>
