--- a/src/main/webapp/app/entities/correspondence/correspondence.component.html
+++ b/src/main/webapp/app/entities/correspondence/correspondence.component.html
@@ -1,7 +1,7 @@
 <div>
     <h2 id="page-heading">
         <span jhiTranslate="imputationSqliApp.correspondence.home.title">Correspondences</span>
-        <input #searchedKey type="text" (keyup)="findBySearchedKey(searchedKey.value)" placeholder="Search">
+        <input type="text" [(ngModel)]="searchedKey" (keyup)="findBySearchedKey()" placeholder="Search">
         <button *jhiHasAnyAuthority="'ROLE_ADMIN'" id="jh-create-entity"
             class="btn btn-primary float-right jh-create-entity create-correspondence"
             [routerLink]="['/correspondence/new']">
