--- a/src/main/webapp/app/entities/comparator-app-tbp-advanced/comparator-app-tbp-advanced.component.html
+++ b/src/main/webapp/app/entities/comparator-app-tbp-advanced/comparator-app-tbp-advanced.component.html
@@ -48,7 +48,7 @@
     <br/>
     <div>
         <div class="table-responsive" *ngIf="comparator">
-            <button id="NotifyAll"
+            <button id="NotifyAll" (click)="notifyCollabsWithGap()"
                     class="btn btn-info btn-sm float-right">
                 <fa-icon [icon]="'envelope'"></fa-icon>
                 <span  jhiTranslate="imputationSqliApp.imputation.notifyAll">
