--- a/src/main/webapp/app/entities/comparator-app-ppmc-advanced/comparator-app-ppmc-advanced.component.html
+++ b/src/main/webapp/app/entities/comparator-app-ppmc-advanced/comparator-app-ppmc-advanced.component.html
@@ -7,6 +7,12 @@
         <div>
             <jhi-alert-error></jhi-alert-error>
             <jhi-alert></jhi-alert>
+            <div id="isNewUploadForm">
+                <label class="radio-inline"><input type="radio" name="newUpload" value="false" (click)="setIsNewUpload('false')">A PPMC file is
+                    already uploaded</label>
+                <label class="radio-inline"><input type="radio" name="newUpload" value="true" (click)="setIsNewUpload('true')" [checked]="true">Upload a new PPMC
+                    file </label>
+            </div>
             <form class="form-inline" name="comparatorForm" role="form" novalidate
                   [ngSwitch]="isAdmin()" (ngSubmit)="compare()">
                 <div class="form-group tbp-import-form" *ngSwitchCase="true">
@@ -35,9 +41,16 @@
                         <option *ngFor="let month of months" [selected]="month == currentMonth">{{month}}</option>
                     </select>
                 </div>
-                <div class="form-group tbp-import-form">
+                <div class="form-group tbp-import-form" *ngIf="isNewUpload">
                     <input type="file" (change)="selectFile($event)">
                     <button type="submit" class="btn btn-success" [disabled]="!selectedFiles">
+                        <span jhiTranslate="global.menu.entities.compare">
+                            Compare
+                        </span>
+                    </button>
+                </div>
+                <div class="form-group tbp-import-form" *ngIf="!isNewUpload">
+                    <button type="submit" class="btn btn-success">
                         <span jhiTranslate="global.menu.entities.compare">
                             Compare
                         </span>
