--- a/src/main/webapp/app/entities/comparator-app-ppmc/comparator-app-ppmc.component.html
+++ b/src/main/webapp/app/entities/comparator-app-ppmc/comparator-app-ppmc.component.html
@@ -63,7 +63,7 @@
         <table class="table table-bordered table-striped">
             <thead>
             <tr>
-                <th><span jhiTranslate="global.field.id">ID</span>
+                <th class="text-center"><span jhiTranslate="global.field.id">ID</span>
                 </th>
                 <th><span jhiTranslate="imputationSqliApp.imputation.collaborator">Collaborator</span>
                 </th>
